micro-data-center/k8s-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: getting-started
  namespace: kyoumatrix
spec:
  containers:
  - name: demo
    image: kyouuma/micro-data-center
